--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --navbar-height: 37px;
   --viewport-height: 100vh;
 }
 
@@ -22,6 +23,7 @@
 }
 
 html {
+
   /* width */
   ::-webkit-scrollbar {
     width: 6px;
@@ -46,7 +48,6 @@ body {
   background: var(--background);
   transition: color 0.5s, background 0.5s;
   max-width: 100vw;
-  overflow-x: hidden;
   margin: 0;
   font-family: var(--font-gnu);
 }
@@ -57,6 +58,7 @@ p {
 }
 
 .--paragraph-block-styles {
+
   p,
   li {
     font-family: var(--font-cormorant);
@@ -109,6 +111,10 @@ button {
   // overflow-x: visible;
   transition: left 0.5s;
   left: 0;
+
+  &.offset-top {
+    top: var(--navbar-height);
+  }
 
   &.open {
     left: $nav-left-sm;
